--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,4 +26,4 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm install --production
 #     - run: npm run build --if-present
-    - run: npm run src/index.js
+    - run: node src/index.js
